Fix the spacing between the vis canvas and the timeline

--- a/frontend/src/pages/visualization/view/TimelineComponent.scss
+++ b/frontend/src/pages/visualization/view/TimelineComponent.scss
@@ -1,13 +1,14 @@
 .timelineContainer {
+    padding-top: 13px;
     width: 100%
 }
 
 .sliderContainer {
-    width: 90%
+    width: 94%
 }
 
 .speedContainer {
-    width: 90%;
+    width: 94%;
     color: white;
     margin-top: 10px;
 }
